Made some changes to the CSS to make it responsive

--- a/bento.css
+++ b/bento.css
@@ -2,7 +2,9 @@
     box-sizing: border-box;
 }
 body {
-    font-family: 'DM Sans', sans-serif;
+    font-family: 'DMSans', sans-serif;
+    font-weight: 200;
+    font-style: normal;
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
@@ -28,23 +30,21 @@ body {
     display: grid;
     place-items: center;
     overflow: hidden;
+    padding: 20px;
 }
 .create-content{
     background-color: rgb(255, 165, 0, 0.2);
     grid-column: 1 / 2;
     grid-row: 1 / 6;
-    width: 100%;
+    width: 90%;
+    font-weight: 300;
 }
 .content{
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     place-items: center;
-}
-
-.create-post >h1{
-    width:70%;
-    
+    font-size: 20px;
 }
 .create-post >h1>span{
     color: #7551d9;
@@ -58,7 +58,10 @@ body {
 }
 
 .write-post >h1{
-    font-size: 1.6rem; 
+    font-size: 39px; 
+    font-style: normal;
+    align-items: start;
+    margin: auto;
 }
 .social-ai{
     grid-column: 2 / 4;
@@ -66,12 +69,13 @@ body {
     background-color: #7551d9;
     color:white;
 }
-
+.social-media{
+    text-align: center;
+}
 .social-media >h1>span{
     color:rgb(255, 191, 0);
 }
 .social-media >h1{
-    width: 85%;
     text-wrap: wrap;
     font-size: 2.9rem;
     text-align: center;
@@ -81,19 +85,18 @@ body {
     display: grid; 
     place-items: center;
     margin-top: 1rem;
+    gap: 20px;
 }
 .star >p{
-    margin: 5px 0;
+    margin: 0;
 }
-
 .schedule-social{
     grid-column: 4 / 5;
     grid-row: 1 / 8;
     background-color: #e0d6f3;
 }
-
-.schedule-post>h1, .schedule-post>p{
-    width: 20%
+.schedule-media>p{
+    font-size: 20px;
 }
 .schedule-post>h1{
     font-size: 20%;
@@ -130,6 +133,7 @@ body {
 }
 .faster-word>h1{
     font-size:300%;
+    font-weight: 500;
     margin: 0;
     margin-top: 20px
 }
@@ -138,17 +142,12 @@ body {
     grid-column: 3 / 4;
     grid-row: 5 / 8;
 }
-.maintain-post{
-    height: 80%;
-}
 
 .maintain-post >h1{
     width: 100%;
     font-size: 1.5rem;
-    margin-top: 1rem
 }
 .maintain-post >img{
-    height: 80%;
     width: 90%;
 }
 .grow-faster{
@@ -157,12 +156,11 @@ body {
     grid-row: 8 / 12;
     width: 100%;
 }
-.grow-followers{
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
+.followers-growth{
+    display: flex;
+    align-items: center;
     height: 100%;
     margin: 0.5rem;
-    display: grid;
     color: white;
 }
 .grow-followers >img{
@@ -174,7 +172,6 @@ body {
     color: white;
 }
 .write-post{
-    width: 80%;
     height: 100%;
     position:relative;
 }
@@ -182,36 +179,63 @@ body {
     object-fit: contain;
 }
 
-@media (max-width: 780px) {
+@media screen and  (max-width: 780px) {
     .grid-container {
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(8, 0);
-        width: 50%;
+        grid-template-rows: repeat(8, auto);
+        width: 90%;
         height: 100;
         gap: 1rem;
-        margin-top: 20px;
+        margin: 20px auto 0;
     }
 
     .item {
-        width: 80%;
-        margin: 10px;
+        width: 100%;
+        margin: 10px auto 0;
+        overflow: visible;
     }
 
     .create-content, .write-ai, .social-ai, .manage-platforms, .maintain-schedule, .schedule-social, .grow-faster, .faster-growth{
-        grid-column: 1/5;
-        grid-row: auto;
+        grid-column: 1/ span 1;
     }
-
+ 
+.social-ai{
+    grid-row: 1/ span 1 ;
+}
+.manage-platforms{
+    grid-row: 2/ span 1;
+}
+.maintain-schedule{
+    grid-row: 3/ span 1;    
+}
+.schedule-social{
+    grid-row: 4/ span 1;
+}
+.grow-faster{
+    grid-row: 5/ span 1;
+}
+.faster-growth{
+    grid-row: 6/ span 1;
+}
+.create-content{
+    grid-row: 7/ span 1;
+}
+.write-ai{
+    grid-row: 8/ span 1;
+}
     .social-media >h1, .schedule-post>h1 {
         font-size: 1rem;
     }
+.followers-growth{
+    flex-direction: column;
+}
 
     .create-post >h1, .write-post >h1, .manage-account >h1, .maintain-post >h1, .faster-word>h1, .schedule-post >h1, .grow-followers >h1{
         font-size: 1.5rem;
     }
 
     .schedule-post >p {
-        font-size: 1rem;
+        font-size: 0.7rem;
         text-align: center;
     }
     .schedule-post >img{
@@ -225,6 +249,10 @@ body {
     .manage-account >img{
         width: 100%;
     }
+    .manage-account>h1{
+        text-align: start;
+        font-size: 0.8rem;
+    }
     .maintain-schedule,.maintain-post,.faster-growth,.faster-audience, .create-content, .create-post, .write-ai, .write-post{
         display: block;
     }
@@ -232,14 +260,15 @@ body {
         margin: 0.5em 0;
         margin-bottom: 2rem;
         height: auto;
+        text-align: start;
+        font-size: 1rem;
     }
-    .grow-followers{
-        grid-template-columns: 1fr;
+    .followers-growth{
+        display: flex;
+        align-items: center;
         width: 80%;
         text-align: center;
         margin: 1rem 0;
-    }
-    .faster-audience,.maintain-post,.create-post,.write-post{
-        margin-left: 1.5rem;
+        font-size: 1rem;
     }    
 }
